--- a/src/main/resources/resources.properties
+++ b/src/main/resources/resources.properties
@@ -1,3 +1,3 @@
-db.url=bolt://localhost:7687
-db.username=neo4j
-db.password=parollNUM1996
+db.url=bolt://hobby-jfnhjimhoeaggbkeipjoljpl.dbs.graphenedb.com:24786
+db.username=app70040043-wr1Gze
+db.password=b.EgwTSjaIxwnC.3jFuzcgEPPczcttl
